[gd_scene load_steps=5 format=2]

[ext_resource path="res://misc/Merriweather.tres" type="DynamicFont" id=2]
[ext_resource path="res://misc/icon.png" type="Texture" id=3]
[ext_resource path="res://1_main/Main.gd" type="Script" id=4]

[sub_resource type="StreamTexture" id=1]
flags = 4

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="Interface" type="Node2D" parent="."]
visible = false

[node name="Image" type="TextureRect" parent="Interface"]
margin_left = 271.0
margin_top = 53.0
margin_right = 655.0
margin_bottom = 341.0
texture = ExtResource( 3 )
stretch_mode = 1

[node name="ColorSlider" type="HSlider" parent="Interface"]
margin_left = 525.0
margin_top = 366.0
margin_right = 669.0
margin_bottom = 382.0
rect_scale = Vector2( 2, 2 )
max_value = 1.0
step = 0.01
value = 0.5

[node name="DepthSlider" type="HSlider" parent="Interface"]
margin_left = 525.0
margin_top = 415.0
margin_right = 669.0
margin_bottom = 431.0
rect_scale = Vector2( 2, 2 )
max_value = 1.0
step = 0.01
value = 0.5

[node name="RichTextLabel2" type="RichTextLabel" parent="Interface"]
margin_left = 17.0
margin_top = 379.0
margin_right = 381.0
margin_bottom = 460.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[right]How true to the original image does this look?

How true to the actual depth does this look?"
text = "How true to the original image does this look?

How true to the actual depth does this look?"

[node name="RichTextLabel5" type="RichTextLabel" parent="Interface"]
margin_left = 824.0
margin_top = 367.0
margin_right = 1000.0
margin_bottom = 418.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "The colors
look correct"
text = "The colors
look correct"

[node name="RichTextLabel6" type="RichTextLabel" parent="Interface"]
margin_left = 824.0
margin_top = 413.0
margin_right = 1000.0
margin_bottom = 464.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "The depths
look correct"
text = "The depths
look correct"

[node name="RichTextLabel7" type="RichTextLabel" parent="Interface"]
margin_left = 373.0
margin_top = 367.0
margin_right = 549.0
margin_bottom = 418.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[right]The colors
look incorrect"
text = "The colors
look incorrect"

[node name="RichTextLabel8" type="RichTextLabel" parent="Interface"]
margin_left = 373.0
margin_top = 413.0
margin_right = 549.0
margin_bottom = 464.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[right]The depths
look incorrect"
text = "The depths
look incorrect"

[node name="Image" type="Node2D" parent="."]

[node name="PreviewImage" type="TextureRect" parent="Image"]
margin_left = 178.0
margin_top = 26.0
margin_right = 498.0
margin_bottom = 266.0
rect_scale = Vector2( 2, 2 )
texture = SubResource( 1 )
stretch_mode = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="Image"]
margin_left = 777.0
margin_top = 418.0
margin_right = 933.0
margin_bottom = 485.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "
[center][wave amp=20 freq=2]Click to continue.[/wave][/center]
"
text = "
Click to continue.
"

[node name="RichTextLabel3" type="RichTextLabel" parent="Image"]
margin_left = 15.0
margin_top = 24.0
margin_right = 187.0
margin_bottom = 75.0
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "Source image:"
text = "Source image:"

[node name="ContinueButton" type="Button" parent="."]
margin_left = 765.0
margin_top = 468.0
margin_right = 853.0
margin_bottom = 497.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 2 )
text = "Continue"

[connection signal="pressed" from="ContinueButton" to="." method="_on_ContinueButton_pressed"]
